force-app/main/default/objects/CurrencyQuotation__c/CurrencyQuotation__c.object-meta.xml
<CustomObject>
    <label>Currency Quotation</label>
    <nameField>
        <label>Nome de Currency quote</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Currency Quotation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>