force-app/main/default/objects/CurrencyQuotation__c/fields/BRL__c.field-meta.xml
<CustomField>
    <fullName>BRL__c</fullName>
    <label>BRL</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>